<resources>
    <string name="app_name">Frugal Shopper</string>
    <string name="frugal_shopper">Frugal Shopper</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="pounds">Pounds</string>
    <string name="price">Price</string>
    <string name="ounces">Ounces</string>
    <string name="compare">Compare</string>
    <string name="bestBuy">Best Buy:</string>
</resources>